--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .hero{
     width: 100%;
-    height: 300px;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight:100px;
-    font-size: x-small;
+    height: 400px;
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
