--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .hero{
     width: 100%;
-    height: 400px;
+    height: 200px;
     background-color: black;
     background-size: cover;
 }
@@ -8,4 +8,20 @@
 .hero2{
     background-color: black;
     height: 150px;
+}
+
+h1 {
+    font-size: 8vw;  
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+@media (min-width: 992px) { 
+        font-size: 6vw;
+    }
+
+@media (min-width: 1200px) { 
+    h1 {
+        font-size: 5vw;
+    }
 }
