--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
 .hero{
-    width: 100%;
-    height: 140px;
-    background-color: black;
-    background-size: cover;
+    padding: 5vw 5vw; 
+    background-color:black;
+    
 }
+
+@media (min-width: 768px) { 
+    .hero-section {
+        padding: 8vw 4vw;
+        background-color: black;
+    }
+}
+
+@media (min-width: 1200px) {
+    .hero-section {
+        padding: 6vw 3vw;
+        background-color: black;
+    }
+}
+
 
 .hero2{
     background-color: black;
@@ -17,8 +31,10 @@ h1 {
 }
 
 @media (min-width: 992px) { 
+    h1 {
         font-size: 6vw;
     }
+}
 
 @media (min-width: 1200px) { 
     h1 {
